manifests/traefik/04-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.k3s.dahan.house`)
      middlewares:
        - name: traefik-dashboard-auth
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: k3s-dahan-house-tls
